[package]
name = "fuzed-iterator"
version = "1.0.1"
authors = ["WATANABE Yuki <magicant@wonderwand.net>"]
edition = "2021"
description = "Iterator wrapper for detecting incorrect use of non-fused iterators"
repository = "https://github.com/magicant/fuzed-iterator-rs"
license = "MIT OR Apache-2.0"
keywords = ["iterator"]
categories = ["development-tools::debugging", "no-std::no-alloc", "rust-patterns"]
